--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@
 .features_grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: .5fr 1fr 1fr ;
+  grid-template-rows: .5fr 1fr;
   align-items: start;
   gap: 20px;
 }
