--- a/style.css
+++ b/style.css
@@ -1,204 +1,264 @@
 .gradient-background {
-  background: linear-gradient(300deg, #1A1A2E, #16213E, #0F3460,#872341, #BE3144, #F05941);
-  background-size: 200% 200%;
-  animation: gradient-animation 25s ease infinite;
+background: linear-gradient(300deg, #1A1A2E, #16213E, #0F3460,#872341, #BE3144, #F05941);
+background-size: 200% 200%;
+animation: gradient-animation 25s ease infinite;
 }
 
 @keyframes gradient-animation {
-  0% {
-    background-position: 0% 100%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 100%;
-  }
-  
+0% {
+  background-position: 0% 100%;
+}
+50% {
+  background-position: 100% 50%;
+}
+100% {
+  background-position: 0% 100%;
+}
+
 }
 
 .gradient-background-2 {
-  background: linear-gradient(298deg, #1A1A2E, #16213E, #0F3460,#872341, #BE3144, #F05941);
-  background-size: 250% 100%;
-  animation: gradient-animation2 25s ease infinite;
-  top: 90%;
+background: linear-gradient(298deg, #1A1A2E, #16213E, #0F3460,#872341, #BE3144, #F05941);
+background-size: 250% 100%;
+animation: gradient-animation2 25s ease infinite;
+top: 90%;
 }
 
 @keyframes gradient-animation2 {
-  0% {
-    background-position: 17% 10%;
-  }
-  50% {
-    background-position: 70% 10%;
-  }
-  100% {
-    background-position: 17% 10%;
-  }
+0% {
+  background-position: 17% 10%;
+}
+50% {
+  background-position: 70% 10%;
+}
+100% {
+  background-position: 17% 10%;
+}
 
 }
 
 .brand_logo {
-  width: 4rem;
+width: 4rem;
 }
 
 .text-shadow-drop-br {
-	-webkit-animation: text-shadow-drop-br 5s both;
-	        animation: text-shadow-drop-br 5s both;
+-webkit-animation: text-shadow-drop-br 5s both;
+        animation: text-shadow-drop-br 5s both;
 }
 
 @keyframes text-shadow-drop-br {
-  0% {
-    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
-  }
-  100% {
-    text-shadow: 6px 6px 18px rgba(0, 0, 0, 0.35);
-  }
+0% {
+  text-shadow: 0 0 0 rgba(0, 0, 0, 0);
 }
-
-.profile_photo {
-  object-fit: none;
-  object-position: top;
-  height: 800px;
+100% {
+  text-shadow: 6px 6px 18px rgba(0, 0, 0, 0.35);
 }
-
-.about_photo {
-  object-position: top;
-  width: 700px;
 }
 
 .icon-square {
-  width: 3rem;
-  height: 3rem;
-  border-radius: 0.75rem;
+width: 3rem;
+height: 3rem;
+border-radius: 0.75rem;
 }
 
 .list_educ {
-  list-style: none;
-  font-size: small;
+list-style: none;
+font-size: small;
 }
 
 .features_grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: .5fr 1fr;
-  align-items: start;
-  gap: 20px;
+display: grid;
+grid-template-columns: 1fr 1fr;
+grid-template-rows: .5fr 1fr;
+align-items: start;
+gap: 50px;
 }
 
 .work_history {
-  order: 1;
-  grid-row-start: 2;
-  grid-row-end: 5;
+order: 1;
+grid-row-start: 2;
+grid-row-end: 5;
 }
 
 .education {
-  order: 1;
-  grid-row-start: 1;
-  grid-row: 1.5fr;
+order: 1;
+grid-row-start: 1;
+grid-row: 1.5fr;
 }
 
 .software_used {
-  order: 2;
+order: 2;
 }
 
 .technologies{
-  order: 2;
+order: 2;
 }
 
 .feature_heading{
-  font-weight: 700;
+font-weight: 700;
 }
 
 #work-samples {
-  background-color: white;
+background-color: white;
 }
 
 #about {
-  min-height: 1vh;
+min-height: 1vh;
 }
 
 .feature-photo {
-  object-fit: none;
-  object-position: center;
-  width: 50%;
-  border-radius: 50%;
+object-fit: none;
+object-position: center;
+width: 50%;
+border-radius: 50%;
 }
 
 @property --rotate {
-  syntax: "<angle>";
-  initial-value: 132deg;
-  inherits: false;
+syntax: "<angle>";
+initial-value: 132deg;
+inherits: false;
 }
 
 
 
 .magic-card {
-  background: #191c29;
-  width: var(--card-width);
-  height: var(--card-height);
-  padding: 3px;
-  position: relative;
-  border-radius: 6px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  display: flex;
-  font-size: 1.5em;
-  color: rgb(88 199 250 / 0%);
-  cursor: pointer;
-  font-family: cursive;
+background: #191c29;
+width: var(--card-width);
+height: var(--card-height);
+padding: 3px;
+position: relative;
+border-radius: 6px;
+justify-content: center;
+align-items: center;
+text-align: center;
+display: flex;
+font-size: 1.5em;
+color: rgb(88 199 250 / 0%);
+cursor: pointer;
+font-family: cursive;
 }
 
 .magic-card:hover {
-  color: rgb(88 199 250 / 100%);
-  transition: color 1s;
+color: rgb(88 199 250 / 100%);
+transition: color 1s;
 }
 .magic-card:hover:before, .magic-card:hover:after {
-  animation: none;
-  opacity: 0;
+animation: none;
+opacity: 0;
 }
 
 
 .magic-card::before {
-  content: "";
-  width: 104%;
-  height: 102%;
-  border-radius: 8px;
-  background-image: linear-gradient(
-    var(--rotate)
-    , #5ddcff, #3c67e3 43%, #4e00c2);
-    position: absolute;
-    z-index: -1;
-    top: -1%;
-    left: -2%;
-    animation: spin 2.5s linear infinite;
-}
-
-.magic-card::after {
+content: "";
+width: 104%;
+height: 102%;
+border-radius: 8px;
+background-image: linear-gradient(
+  var(--rotate)
+  , #5ddcff, #3c67e3 43%, #4e00c2);
   position: absolute;
-  content: "";
-  top: calc(var(--card-height) / 6);
-  left: 0;
-  right: 0;
   z-index: -1;
-  height: 100%;
-  width: 100%;
-  margin: 0 auto;
-  transform: scale(0.8);
-  filter: blur(calc(var(--card-height) / 6));
-  background-image: linear-gradient(
-    var(--rotate)
-    , #5ddcff, #3c67e3 43%, #4e00c2);
-    opacity: 1;
-  transition: opacity .5s;
+  top: -1%;
+  left: -2%;
   animation: spin 2.5s linear infinite;
 }
 
-@keyframes spin {
-  0% {
-    --rotate: 0deg;
-  }
-  100% {
-    --rotate: 360deg;
-  }
+.magic-card::after {
+position: absolute;
+content: "";
+top: calc(var(--card-height) / 6);
+left: 0;
+right: 0;
+z-index: -1;
+height: 100%;
+width: 100%;
+margin: 0 auto;
+transform: scale(0.8);
+filter: blur(calc(var(--card-height) / 6));
+background-image: linear-gradient(
+  var(--rotate)
+  , #5ddcff, #3c67e3 43%, #4e00c2);
+  opacity: 1;
+transition: opacity .5s;
+animation: spin 2.5s linear infinite;
 }
+
+@keyframes spin {
+0% {
+  --rotate: 0deg;
+}
+100% {
+  --rotate: 360deg;
+}
+}
+
+.carousel_text {
+margin: 1em 0;
+display: block;
+padding-top: 2em;
+color: #1A1A2E;
+}
+
+.carousel_img {
+  object-fit: cover;
+  max-height: 600px;
+  margin: 0 auto;
+}
+
+
+
+@media only screen and (max-width: 800px) {
+
+.about_section {
+  display: block;
+}
+
+#profile_photo, .about_photo {
+  object-fit: cover;
+  object-position: top;
+  height: 300px;
+  width: 100%;
+}
+
+.features_grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: .5fr 1fr;
+  align-items: start;
+  gap: 10px;
+  padding: 2em 3em;
+}
+
+.carousel_text >i mg {
+  object-fit: cover;
+  object-position: top;
+}
+
+.about_photo_container > div{
+ padding: 0;
+}
+.carousel_img {
+  max-height: 300px;
+}
+
+main {
+  height: 80vh;
+}
+
+}
+
+@media only screen and (min-width: 1200px) {
+  
+  body > section, .carousel-inner {
+    height: 100vh;
+  }
+  
+  .about_section {
+    display: inline-flex;
+    justify-content: center;
+  }
+
+  
+  
+
+  }
