--- a/style.css
+++ b/style.css
@@ -77,28 +77,6 @@ list-style: none;
 font-size: small;
 }
 
-.features_grid {
-display: grid;
-grid-template-columns: 1fr 1fr;
-grid-template-rows: .5fr 1fr;
-align-items: start;
-gap: 20px;
-}
-
-.work_history {
-grid-row-start: 2;
-grid-row-end: 5;
-}
-
-.education {
-grid-row-start: 1;
-grid-row: 1.5fr;
-}
-
-
-#work-samples {
-background-color: white;
-}
 
 @property --rotate {
 syntax: "<angle>";
@@ -181,8 +159,8 @@ animation: spin 2.5s linear infinite;
 
 
 .carousel_img {
-  object-fit: contain;
-  margin: auto auto;
+  object-fit: cover;
+  margin: 0 auto;
   max-height: 700px;
   width: auto;
 }
@@ -265,8 +243,8 @@ animation: spin 2.5s linear infinite;
 }
 }
 
-@media only screen and (max-width: 700px) {
-.carousel-indicators {
+@media only screen and (max-width: 680px) {
+.trade_mark, .carousel-control-next, .carousel-control-prev {
     display: none;
   }
   
