--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ body {
 }
 
 @media only screen and (max-width: 680px) {
-.trade_mark, .carousel-control-next, .carousel-control-prev {
+.trade_mark{
     display: none;
   }
 
