--- a/style.css
+++ b/style.css
@@ -207,6 +207,10 @@ body {
   overflow-x: hidden;
 }
 
+h1, h2, p, li {
+  text-shadow: 1px 1.5px 2px #00000071;
+}
+
 @media only screen and (max-width: 990px) {
 
 .features_grid {
