--- a/style.css
+++ b/style.css
@@ -3,9 +3,15 @@ body, footer, main{
 background: linear-gradient(300deg, #1A1A2E, #16213E, #0F3460,#872341, #BE3144, #F05941);
 background-size: 200% 200%;
 animation: gradient-animation 25s ease infinite;
-width: 100vw;
-overflow-x: hidden;
 }
+
+html,body {
+  margin:0;
+  padding:0;
+  overflow-x: hidden;
+  width: 100vw;
+}
+
 
 @keyframes gradient-animation {
 0% {
@@ -253,6 +259,10 @@ footer > .brand_logo {
 
 .btn-lg.btn_width {
   width: 100%;
+}
+
+.text-body-secondary > svg{
+  width: 15px;
 }
   
 }
