--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ animation: spin 2.5s linear infinite;
 }
 
 
-@media only screen and (max-width: 990px) {
+@media only screen and (max-width: 766px) {
 
 .features_grid {
   display: grid;
@@ -239,6 +239,10 @@ animation: spin 2.5s linear infinite;
 
 .btn_width {
   margin: 5px 0;
+}
+
+  .btn-lg.btn_width {
+  width: 30%;
 }
 }
 
